--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "ownerNumber": ["628127668234@s.whatsapp.net"],
-  "botName": "ChikaBot",
+  "ownerNumber": ["380946910922@s.whatsapp.net"],
+  "botName": "HH-BOT",
   "sessionName": "chika",
   "pathImg": "./media/yo.jpg"
 }
