--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "ownerNumber": ["380946910922@s.whatsapp.net"],
   "botName": "HH-BOT",
-  "sessionName": "chika",
+  "sessionName": "session.json",
   "pathImg": "./media/yo.jpg"
 }
